Update PostgreSQL port mapping and enhance development environment setup
- Changed PostgreSQL port mapping in docker-compose.yml from 5432 to 55432 for better compatibility.
- Updated Makefile to reflect the new port in wait-on commands for PostgreSQL readiness.
- Added new API routes for session review data retrieval and session results export.
- Introduced new session-related data structures and improved error handling in file processing.
- Enhanced WebSocket handling with improved buffering and connection management.
- Implemented performance monitoring features in the frontend, including a new Performance Dashboard component.
- Added session persistence service for crash recovery and session management.
- Updated results viewer to support session review and export functionalities.

--- a/redactify/Makefile
+++ b/redactify/Makefile
@@ -20,14 +20,14 @@ dev: ## Start development environment
 	@echo "Starting PostgreSQL..."
 	docker-compose up -d postgres
 	@echo "Waiting for PostgreSQL to be ready..."
-	npx wait-on tcp:5432
+	npx wait-on tcp:55432
 	npx concurrently "make dev-backend" "make dev-frontend" "wait-on --timeout 60000 --interval 2000 http://127.0.0.1:3000 http://127.0.0.1:8080/health && electron ."
 
 dev-frontend: ## Start frontend development server
 	cd frontend && npm start
 
 dev-backend: ## Start backend development server
-	cd backend && go mod tidy && DB_HOST=127.0.0.1 go run cmd/server/main.go
+	cd backend && go mod tidy && DB_HOST=127.0.0.1 DB_PORT=55432 go run cmd/server/main.go
 
 # Building
 build-dev: ## Build for development
